--- a/Company/Company/App.config
+++ b/Company/Company/App.config
@@ -1,3 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <connectionStrings>
+    <add name="CompanyConn" connectionString="Data Source=TAJ-PC\SQLEXPRESS;Initial Catalog=Company;Integrated Security=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
